implementacao dos endpoints da gestao de gains
