# internal/v1/gain/repository/types.go
@@ -1,0 +1,28 @@
+package repository
+
+import "time"
+
+type Gain struct {
+	Id               string
+	CreatedAt        time.Time
+	PayIn            time.Time
+	Description      string
+	Value            float64
+	IsPassive        bool
+	GainProjectionId string
+	UserId           string
+	Category         GainCategory
+}
+
+type GainCategory struct {
+	Id       uint
+	Category string
+}
+
+type QueryParams struct {
+	userId string
+	month  uint
+	year   uint
+	limit  uint
+	offset uint
+}
